# tartanhacks

./: .gitignore  README.md  debug_hello.s  fibonacci.rs  hello.cpp  hello.rs  highlight_errors.txt  localbolt.html  pyproject.toml  requirements.txt  run_all_tests.sh
src/localbolt/: __init__.py  engine.py  main.py
src/localbolt/asm_ui/: asm_app.py
src/localbolt/compiler/: analylzer.py  driver.py  rust_driver.py
src/localbolt/parsing/: __init__.py  diagnostics.py  lexer.py  mapper.py  perf_parser.py  rust_demangle.py  rust_lexer.py
src/localbolt/ui/: app.py  flags_palette.py  instruction_help.py  source_peek.py  styles.tcss  widgets.py
src/localbolt/utils/: asm_help.py  highlighter.py  lang.py  state.py  test_assembly.txt  test_cpp.cpp  watcher.py
tests/: debug_lexer_output.py  debug_noise_output.py  execution_commands.txt  test_a.py  test_b.py  test_c_app.py  test_c_main.py  test_c_widgets.py  test_engine.py  test_lexer.py  test_watcher.py
tests/integration/: test_lexer.py  test_watcher.py
tests/unit/: test_asm_help.py  test_c_main.py  test_config_extended.py  test_diagnostics.py  test_engine_routing.py  test_lang.py  test_lang_extended.py  test_lexer_extended.py  test_main_extended.py  test_mapper.py  test_parser.py  test_perf_parser.py  test_process_assembly.py  test_rust_demangle.py  test_rust_demangle_extended.py  test_rust_driver.py  test_rust_driver_extended.py  test_rust_lexer.py  test_rust_lexer_extended.py  test_source_peek.py  test_state.py
