[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "localbolt"
version = "0.1.0"
description = "A local, offline Compiler Explorer TUI"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.47.1",
    "watchdog>=3.0.0",
    "pygments>=2.17.2",
    "rich>=13.7.0"
]

[project.scripts]
# creates a 'localbolt' command in your terminal
# that runs the 'run' function in src/localbolt/main.py
localbolt = "localbolt.main:run"

[tool.setuptools.packages.find]
where = ["src"]
